(Server) (Feature) add authorization

--- a/PersonalSite/appsettings.json
+++ b/PersonalSite/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthConfig": {
+    "PrivateKey": "My%s834u3p6e*3rR(3an%d009m3key",
+    "Issuer": "https://noderoid.dev",
+    "Audience": "noderoid.dev"
+  }
 }
