--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc.Core" Version="5.3.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
     </ItemGroup>
 
 </Project>
