(Server) (Feature) Add EF

--- a/PersonalSite/appsettings.json
+++ b/PersonalSite/appsettings.json
@@ -10,5 +10,8 @@
     "PrivateKey": "My%s834u3p6e*3rR(3an%d009m3key",
     "Issuer": "https://noderoid.dev",
     "Audience": "noderoid.dev"
+  },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Database=PersonalSite;Username=postgres;Password=Aezakmi12;"
   }
 }
