(Server) (Feature) Add google auth

--- a/PersonalSite/appsettings.json
+++ b/PersonalSite/appsettings.json
@@ -9,7 +9,12 @@
   "AuthConfig": {
     "PrivateKey": "My%s834u3p6e*3rR(3an%d009m3key",
     "Issuer": "https://noderoid.dev",
-    "Audience": "noderoid.dev"
+    "Audience": "noderoid.dev",
+    "Google": {
+      "ClientId": "714351833041-ohb8v036d4efaoo6g0bs38us42ff4v8r.apps.googleusercontent.com",
+      "ClientSecret": "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",
+      "RedirectURI": "http://localhost:4200/auth"
+    }
   },
   "ConnectionStrings": {
     "Default": "Host=localhost;Database=PersonalSite;Username=postgres;Password=Aezakmi12;"
