(Feature) add blog tree

--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <Folder Include="Api\Validators" />
+      <Folder Include="Core\Models" />
     </ItemGroup>
 
 </Project>
