--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngneat/until-destroy": "^9.2.2",
     "ngx-markdown": "^14.0.1",
     "prismjs": "^1.28.0",
     "rxjs": "~7.5.0",
