(Feature) add post search

--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -25,4 +25,10 @@
       <Folder Include="Core\Models" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="FullIndexSearch">
+        <HintPath>..\..\FullIndexSearch\FullIndexSearch\bin\Release\net6.0\FullIndexSearch.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
