--- a/PersonalSite/appsettings.json
+++ b/PersonalSite/appsettings.json
@@ -19,6 +19,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=PersonalSite;Username=postgres;Password=Aezakmi12;"
+    "Default": "Host=localhost;Database=PersonalSite;Port=5433;Username=postgres;Password=root;"
   }
 }
