--- a/PersonalSite/appsettings.Development.json
+++ b/PersonalSite/appsettings.Development.json
@@ -2,7 +2,23 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Serilog": "Debug"
     }
+  },
+  "AllowedHosts": "*",
+  "AuthConfig": {
+    "PrivateKey": "My%s834u3p6e*3rR(3an%d009m3key",
+    "Issuer": "https://noderoid.dev",
+    "Audience": "noderoid.dev",
+    "RefreshTokenHoursValidity": 24,
+    "Google": {
+      "ClientId": "714351833041-ohb8v036d4efaoo6g0bs38us42ff4v8r.apps.googleusercontent.com",
+      "ClientSecret": "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",
+      "RedirectURI": "http://localhost:4200/auth"
+    }
+  },
+  "ConnectionStrings": {
+    
   }
 }
